agentes en el grid

--- a/Agentes/RanaBomberos.ipynb
+++ b/Agentes/RanaBomberos.ipynb
@@ -112,11 +112,20 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 96,
       "metadata": {
         "id": "-yMJhLJKTuri"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Puertas: [(0, 1, 0, 2), (0, 5, 0, 6), (1, 3, 1, 4), (1, 7, 2, 7), (2, 2, 2, 3), (2, 3, 2, 4), (2, 4, 2, 5), (2, 5, 3, 5), (3, 3, 4, 3), (3, 4, 4, 4), (3, 5, 4, 5), (4, 1, 4, 2), (5, 5, 5, 6)]\n",
+            "Puntos de acceso: [(0, 3), (0, 6), (1, 0), (3, 7), (5, 3), (5, 6)]\n"
+          ]
+        }
+      ],
       "source": [
         "\n",
         "# -------------------------------\n",
@@ -170,13 +179,15 @@
         "\n",
         "fire_coords = parse_positions(Fire)\n",
         "door_coords = parse_doors(Door_lines)\n",
+        "print(\"Puertas:\", door_coords)\n",
         "access_coords = parse_positions(Access_point)\n",
+        "print(\"Puntos de acceso:\", access_coords)\n",
         "false_alarm_coords = parse_positions_v_f(victim)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 60,
+      "execution_count": 97,
       "metadata": {
         "id": "8K917YXHT2vr"
       },
@@ -186,34 +197,18 @@
           "output_type": "stream",
           "text": [
             "[1, 0, 1, 1] [1, 1, 1, 0] [1, 0, 1, 1] [1, 0, 1, 0] [1, 0, 0, 0] [1, 1, 0, 0] [1, 0, 0, 1] [1, 1, 0, 0] \n",
-            "[1, 0, 0, 0] [1, 0, 0, 0] [1, 0, 1, 0] [1, 1, 1, 0] [0, 0, 1, 1] [0, 1, 1, 0] [0, 0, 1, 1] [0, 1, 1, 0] \n",
+            "[0, 0, 0, 0] [1, 0, 0, 0] [1, 0, 1, 0] [1, 1, 1, 0] [0, 0, 1, 1] [0, 1, 1, 0] [0, 0, 1, 1] [0, 1, 1, 0] \n",
             "[0, 0, 1, 1] [0, 1, 1, 0] [1, 1, 0, 1] [1, 1, 0, 1] [1, 1, 1, 1] [1, 0, 1, 1] [1, 1, 1, 0] [1, 1, 0, 1] \n",
-            "[1, 0, 1, 1] [1, 0, 1, 0] [0, 1, 1, 0] [0, 1, 1, 1] [1, 0, 1, 1] [1, 0, 1, 0] [1, 0, 1, 0] [0, 1, 1, 0] \n",
+            "[1, 0, 1, 1] [1, 0, 1, 0] [0, 1, 1, 0] [0, 1, 1, 1] [1, 0, 1, 1] [1, 0, 1, 0] [1, 0, 1, 0] [0, 0, 0, 0] \n",
             "[1, 0, 0, 1] [1, 1, 1, 0] [1, 0, 0, 1] [1, 1, 0, 0] [1, 1, 0, 1] [1, 1, 0, 1] [1, 1, 0, 1] [1, 1, 0, 1] \n",
-            "[0, 1, 1, 1] [1, 0, 1, 1] [0, 0, 1, 0] [0, 1, 1, 0] [0, 1, 1, 1] [0, 1, 1, 1] [0, 1, 1, 1] [0, 1, 1, 1] \n",
-            "Puertas por celda:\n",
-            "Celda (0, 1): 1 puertas\n",
-            "Celda (0, 2): 1 puertas\n",
-            "Celda (0, 5): 1 puertas\n",
-            "Celda (0, 6): 1 puertas\n",
-            "Celda (1, 3): 1 puertas\n",
-            "Celda (1, 4): 1 puertas\n",
-            "Celda (1, 7): 1 puertas\n",
-            "Celda (2, 7): 1 puertas\n",
-            "Celda (2, 2): 1 puertas\n",
-            "Celda (2, 3): 2 puertas\n",
-            "Celda (2, 4): 2 puertas\n",
-            "Celda (2, 5): 2 puertas\n",
-            "Celda (3, 5): 2 puertas\n",
-            "Celda (3, 3): 1 puertas\n",
-            "Celda (4, 3): 1 puertas\n",
-            "Celda (3, 4): 1 puertas\n",
-            "Celda (4, 4): 1 puertas\n",
-            "Celda (4, 5): 1 puertas\n",
-            "Celda (4, 1): 1 puertas\n",
-            "Celda (4, 2): 1 puertas\n",
-            "Celda (5, 5): 1 puertas\n",
-            "Celda (5, 6): 1 puertas\n"
+            "[0, 1, 1, 1] [1, 0, 1, 1] [0, 0, 1, 0] [0, 0, 0, 0] [0, 1, 1, 1] [0, 1, 1, 1] [0, 0, 0, 0] [0, 1, 1, 1] \n",
+            "[(0, 2), (0, 6), (1, 2), (2, 2), (4, 1), (4, 4), (4, 6), (4, 7), (5, 2)]\n",
+            "0 0 2 0 0 0 2 0 \n",
+            "0 0 2 0 0 0 0 0 \n",
+            "0 0 2 0 0 0 0 0 \n",
+            "0 0 0 0 0 0 0 0 \n",
+            "0 2 0 0 2 0 2 2 \n",
+            "0 0 2 0 0 0 0 0 \n"
           ]
         }
       ],
@@ -285,6 +280,9 @@
         "    print(matriz_pared[i][j].get_positions(), end=\" \")\n",
         "  print()\n",
         "\n",
+        "  for x,y in access_coords:\n",
+        "    matriz_pared[x][y].set_cell([0,0,0,0]) # acceso libre\n",
+        "\n",
         "###############################################################################\n",
         "# ------------------------------\n",
         "# Clase Puertas\n",
@@ -352,11 +350,11 @@
         "        if cell in cell_doors:\n",
         "            for door in cell_doors[cell]:   \n",
         "                door.open()\n",
-        "\n",
+        "\"\"\"\n",
         "print(\"Puertas por celda:\")\n",
         "for cell, doors in cell_doors.items():\n",
         "    print(f\"Celda {cell}: {len(doors)} puertas\")\n",
-        "\n",
+        "\"\"\"\n",
         "###############################################################################\n",
         "#----------------------\n",
         "# clase fire\n",
@@ -427,12 +425,38 @@
         "\n",
         "\n",
         "###############################################################################\n",
-        "\n",
+        "print(fire_coords)\n",
         "height, width = 6, 8\n",
         "matriz_fire = [[Fire(i,j) for j in range(width)] for i in range(height)]\n",
         "\n",
         "for (x,y) in fire_coords:\n",
         "  matriz_fire[x][y].set_state(2)\n",
+        "\n",
+        "for i in range(height):\n",
+        "    for j in range(width):\n",
+        "        print(matriz_fire[i][j].get_state(), end=\" \")\n",
+        "    print()\n",
+        "\"\"\"\n",
+        "aux = 0\n",
+        "while aux < 3:\n",
+        "    print(f\"Paso {aux}\")\n",
+        "    for i in range(height):\n",
+        "        for j in range(width):\n",
+        "            print(matriz_fire[i][j].get_state(), end=\" \")\n",
+        "        print()\n",
+        "    print()\n",
+        "    # Expandir fuegos\n",
+        "    for i in range(height):\n",
+        "        for j in range(width):\n",
+        "            if matriz_fire[i][j].get_state() == Fire.FIRE:\n",
+        "                matriz_fire[i][j].expand(matriz_fire, matriz_pared)\n",
+        "    # Propagar explosiones\n",
+        "    for i in range(height):\n",
+        "        for j in range(width):\n",
+        "            if matriz_fire[i][j].to_explode:\n",
+        "                matriz_fire[i][j].propagate_explosion(matriz_fire, matriz_pared)\n",
+        "    aux += 1\n",
+        "\"\"\"\n",
         "\n",
         "###############################################################################\n",
         "# Clase Victim or False Alarm\n",
@@ -483,9 +507,9 @@
         "# Diccionario de direcciones\n",
         "# ------------------------------\n",
         "DIRECTIONS = {\n",
-        "    \"up\":    (1, 0, 0),  # fila-1, col, lado 0\n",
+        "    \"up\":    (-1, 0, 0),  # fila-1, col, lado 0\n",
         "    \"left\":  (0, -1, 1),  # fila, col-1, lado 1\n",
-        "    \"down\":  (-1, 0, 2),   # fila+1, col, lado 2\n",
+        "    \"down\":  (1, 0, 2),   # fila+1, col, lado 2\n",
         "    \"right\": (0, 1, 3)    # fila, col+1, lado 3\n",
         "}\n",
         "\n",
@@ -549,44 +573,46 @@
         "      return valid_moves\n",
         "\n",
         "    def move(self, matriz_pared, matriz_fire, matriz_POI):\n",
-        "      moves = self.get_valid_moves(matriz_pared)\n",
-        "      if moves:\n",
-        "        new_pos = random.choice(moves)\n",
-        "        (x,y) = new_pos\n",
-        "        self.model.grid.move_agent(self, new_pos)\n",
+        "        moves = self.get_valid_moves(matriz_pared)\n",
+        "        if not moves:\n",
+        "            return\n",
+        "\n",
+        "        # Elegir nueva posición\n",
+        "        ni, nj, side = random.choice(moves)\n",
+        "        self.model.grid.move_agent(self, (ni, nj))\n",
         "        self.AP -= 1\n",
         "\n",
-        "        if (x,y) == matriz_fire[x][y] and self.AP >= 2:\n",
-        "          self.AP -= 2\n",
-        "          self.model.grid.move.agent(self,new_pos)\n",
+        "        # Convertir a índices de matriz (fila,col)\n",
+        "        fila, col = nj, ni\n",
         "\n",
-        "        #destruir paredes\n",
-        "        cell = matriz_pared[x][y]\n",
-        "        if cell.get_positions(dir) == 1 and self.AP > 2:\n",
-        "          cell[x,y].set_damages(0.5)\n",
-        "          self.model.total_damage += 1\n",
-        "          print(\"Daño total del edificio por rana:\", self.model.total_damage)\n",
-        "          self.AP -= 2\n",
-        "          return\n",
+        "        # Apagar fuego\n",
+        "        fire_cell = matriz_fire[fila][col]\n",
+        "        if fire_cell.get_state() == Fire.FIRE and self.AP >= 2:\n",
+        "            fire_cell.set_state(Fire.EMPTY)\n",
+        "            self.AP -= 2\n",
         "\n",
-        "        #apagar fuego\n",
-        "        fire_cell = matriz_fire[x][y]\n",
-        "        if fire_cell.get_state() == Fire.FIRE and self.AP > 2:\n",
-        "          matriz_fire[x][y].set_state(Fire.EMPTY)\n",
-        "          self.AP -= 2\n",
+        "        # Destruir pared\n",
+        "        cell = matriz_pared[fila][col]\n",
+        "        if cell.get_positions(side) == 1 and self.AP >= 2:\n",
+        "            cell.set_damage(side, 0.5)\n",
+        "            self.model.total_damage += 1\n",
+        "            print(\"Daño total del edificio por rana:\", self.model.total_damage)\n",
+        "            self.AP -= 2\n",
         "\n",
-        "        poi = self.model.poi_grid[x][y]\n",
+        "        # 👥 Revisar POI\n",
+        "        poi = self.model.poi_grid[fila][col]\n",
         "        if poi and not poi.revealed:\n",
-        "          poi.reveal()\n",
-        "          if poi.is_victim() and self.carry == False:\n",
-        "              self.carry = True\n",
-        "              self.model.rescued += 1\n",
-        "              if self.model.rescued >= self.model.rescue_goal:\n",
+        "            poi.reveal()\n",
+        "            if poi.is_victim() and not self.carry:\n",
+        "                self.carry = True\n",
+        "                self.model.rescued += 1\n",
+        "                if self.model.rescued >= self.model.rescue_goal:\n",
         "                    print(\"VICTORIA: suficientes víctimas rescatadas\")\n",
-        "          elif poi.is_false():\n",
-        "                pass  # solo se descarta\n",
         "\n",
+        "        # Recargar AP\n",
         "        self.sum_AP()\n",
+        "        print(f\"Rana en {self.pos} con AP={self.AP} y carry={self.carry}\")\n",
+        "\n",
         "\n",
         "\n",
         "    def step(self):\n",
@@ -609,12 +635,10 @@
         "        self.collapsed = False   # <-- bandera para colapso\n",
         "        self.datacollector = DataCollector(model_reporters={\"Grid\": get_grid})\n",
         "\n",
-        "        for _ in door_list:\n",
-        "            open_door(access_coords)\n",
+        "        \n",
         "\n",
         "        for (x, y) in access_coords:\n",
-        "            doors = cell_doors.get((x, y), [])\n",
-        "            if any(door.get_state() == Door.OPEN for door in doors):\n",
+        "            if matriz_pared[x][y].is_empty():\n",
         "                agent = RanaAgent(self)\n",
         "                if 0 <= x < width and 0 <= y < height:\n",
         "                    self.grid.place_agent(agent, (x, y))\n",
@@ -622,11 +646,12 @@
         "\n",
         "        self.fire_grid = matriz_fire\n",
         "        self.poi_grid = matriz_POI\n",
+        "        print(\"Agentes creados:\", len(model.schedule.agents))\n",
         "\n",
         "    def step(self):\n",
         "        if self.collapsed:\n",
         "            return  # detener el modelo si ya colapsó\n",
-        "#print en daño fuego y daño agente\n",
+        "        #print en daño fuego y daño agente\n",
         "        # Acciones de agentes\n",
         "        self.schedule.step()\n",
         "\n",
@@ -689,7 +714,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 62,
+      "execution_count": 99,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -702,12 +727,31 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
+            "Agentes creados: 0\n",
             "Paso 0\n",
+            "Rana en (5, 2) con AP=7 y carry=False\n",
+            "Daño total del edificio por rana: 1\n",
+            "Rana en (0, 4) con AP=5 y carry=False\n",
+            "Rana en (1, 1) con AP=7 y carry=False\n",
             "Paso 1\n",
-            "DERROTA: demasiadas víctimas perdidas\n",
+            "Daño total del edificio por rana: 2\n",
+            "Rana en (4, 2) con AP=8 y carry=True\n",
+            "Daño total del edificio por rana: 3\n",
+            "Rana en (2, 1) con AP=6 y carry=False\n",
+            "Daño total del edificio por rana: 4\n",
+            "Rana en (1, 4) con AP=4 y carry=False\n",
             "Paso 2\n",
+            "Daño total del edificio por rana: 20\n",
+            "Rana en (0, 4) con AP=5 y carry=False\n",
+            "Daño total del edificio por rana: 21\n",
+            "Rana en (1, 1) con AP=7 y carry=False\n",
+            "Daño total del edificio por rana: 22\n",
+            "Rana en (5, 2) con AP=9 y carry=True\n",
             "DERROTA: demasiadas víctimas perdidas\n",
             "Paso 3\n",
+            "Rana en (1, 2) con AP=10 y carry=False\n",
+            "Rana en (5, 3) con AP=8 y carry=True\n",
+            "Rana en (0, 3) con AP=6 y carry=False\n",
             "DERROTA: edificio colapsado\n",
             "Paso 4\n",
             "Paso 5\n",
@@ -1711,7 +1755,7 @@
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "C:\\Users\\mbajo\\AppData\\Local\\Temp\\ipykernel_5536\\1095967249.py:121: DeprecationWarning: The time module and all its Schedulers are deprecated and will be removed in a future version. They can be replaced with AgentSet functionality. See the migration guide for details. https://mesa.readthedocs.io/latest/migration_guide.html#time-and-schedulers\n",
+            "C:\\Users\\mbajo\\AppData\\Local\\Temp\\ipykernel_5536\\598112439.py:122: DeprecationWarning: The time module and all its Schedulers are deprecated and will be removed in a future version. They can be replaced with AgentSet functionality. See the migration guide for details. https://mesa.readthedocs.io/latest/migration_guide.html#time-and-schedulers\n",
             "  self.schedule = RandomActivation(self)\n"
           ]
         }
