cambio de coordenadas

--- a/Agentes/RanaBomberos.ipynb
+++ b/Agentes/RanaBomberos.ipynb
@@ -96,7 +96,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 114,
+      "execution_count": null,
       "metadata": {
         "id": "-yMJhLJKTuri"
       },
@@ -134,7 +134,7 @@
         "        parts = line.strip().split()\n",
         "        if len(parts) >= 2:\n",
         "            x, y = map(int, parts[:2])\n",
-        "            coords.append((x-1, y-1))\n",
+        "            coords.append((y-1, x-1))\n",
         "    return coords\n",
         "\n",
         "def parse_positions_v_f(lines):\n",
@@ -145,9 +145,9 @@
         "            x, y = map(int, parts[:2])\n",
         "            kind = parts[2]\n",
         "            if kind == \"v\":\n",
-        "                coords.append((x-1, y-1, \"v\"))\n",
+        "                coords.append((y-1, x-1, \"v\"))\n",
         "            elif kind == \"f\":\n",
-        "                coords.append((x-1, y-1, \"f\"))\n",
+        "                coords.append((y-1, x-1, \"f\"))\n",
         "\n",
         "\n",
         "    return coords\n",
