Actualización de Datos a Importar en la conexión

--- a/Agentes/RanaBomberos.ipynb
+++ b/Agentes/RanaBomberos.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 48,
+      "execution_count": 23,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -18,7 +18,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 49,
+      "execution_count": 24,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -59,7 +59,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 50,
+      "execution_count": 25,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -86,7 +86,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 51,
+      "execution_count": 26,
       "metadata": {
         "id": "-yMJhLJKTuri"
       },
@@ -96,7 +96,14 @@
           "output_type": "stream",
           "text": [
             "Puertas: [(1, 0, 2, 0), (5, 0, 6, 0), (3, 1, 4, 1), (7, 1, 7, 2), (2, 2, 3, 2), (3, 2, 4, 2), (4, 2, 5, 2), (5, 2, 5, 3), (3, 3, 3, 4), (4, 3, 4, 4), (5, 3, 5, 4), (1, 4, 2, 4), (5, 5, 6, 5)]\n",
-            "Puntos de acceso: [(3, 0), (5, 0), (0, 1), (5, 3), (3, 5), (5, 5)]\n"
+            "Puntos de acceso:"
+          ]
+        },
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            " [(3, 0), (5, 0), (0, 1), (5, 3), (3, 5), (5, 5)]\n"
           ]
         }
       ],
@@ -160,7 +167,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 52,
+      "execution_count": 27,
       "metadata": {
         "id": "8K917YXHT2vr"
       },
@@ -170,7 +177,14 @@
           "output_type": "stream",
           "text": [
             "[1, 0, 1, 1] [1, 1, 1, 0] [1, 0, 1, 1] [1, 0, 1, 0] [1, 0, 0, 0] [1, 1, 0, 0] [1, 0, 0, 1] [1, 1, 0, 0] \n",
-            "[0, 0, 0, 0] [1, 0, 0, 0] [1, 0, 1, 0] [1, 1, 1, 0] [0, 0, 1, 1] [0, 1, 1, 0] [0, 0, 1, 1] [0, 1, 1, 0] \n",
+            "[0, 0, 0, 0] [1, 0, 0, 0] [1, 0, 1, 0] [1, 1, 1, 0] [0, 0, 1, 1]"
+          ]
+        },
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            " [0, 1, 1, 0] [0, 0, 1, 1] [0, 1, 1, 0] \n",
             "[0, 0, 1, 1] [0, 1, 1, 0] [1, 1, 0, 1] [1, 1, 0, 1] [1, 1, 1, 1] [1, 0, 1, 1] [1, 1, 1, 0] [1, 1, 0, 1] \n",
             "[1, 0, 1, 1] [1, 0, 1, 0] [0, 1, 1, 0] [0, 1, 1, 1] [1, 0, 1, 1] [0, 0, 0, 0] [1, 0, 1, 0] [0, 1, 1, 0] \n",
             "[1, 0, 0, 1] [1, 1, 1, 0] [1, 0, 0, 1] [1, 1, 0, 0] [1, 1, 0, 1] [1, 1, 0, 1] [1, 1, 0, 1] [1, 1, 0, 1] \n",
@@ -190,7 +204,7 @@
               "'\\nprint(\"Matriz de POIs:\")\\nfor i in range(height):\\n    for j in range(width):\\n        if matriz_POI[i][j] is None:\\n            print(\" . \", end=\" \")\\n        else:\\n            print(f\" {matriz_POI[i][j].role} \", end=\" \")\\n    print()\\n'"
             ]
           },
-          "execution_count": 52,
+          "execution_count": 27,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -479,7 +493,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 53,
+      "execution_count": null,
       "metadata": {
         "id": "5r2QkzYjgRE0"
       },
@@ -619,7 +633,8 @@
         "            if 0 <= row < height and 0 <= col < width:\n",
         "                self.grid.place_agent(agent, (row, col))\n",
         "                self.schedule.add(agent)\n",
-        "\n",
+        "        \n",
+        "        self.wall_grid = matriz_pared\n",
         "        self.fire_grid = matriz_fire\n",
         "        self.poi_grid = matriz_POI\n",
         "        print(\"Agentes creados:\", len(self.schedule.agents))\n",
@@ -684,7 +699,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 54,
+      "execution_count": 30,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -697,7 +712,7 @@
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "C:\\Users\\mbajo\\AppData\\Local\\Temp\\ipykernel_14684\\2299106134.py:117: DeprecationWarning: The time module and all its Schedulers are deprecated and will be removed in a future version. They can be replaced with AgentSet functionality. See the migration guide for details. https://mesa.readthedocs.io/latest/migration_guide.html#time-and-schedulers\n",
+            "C:\\Users\\LENOVO\\AppData\\Local\\Temp\\ipykernel_14372\\2299106134.py:117: DeprecationWarning: The time module and all its Schedulers are deprecated and will be removed in a future version. They can be replaced with AgentSet functionality. See the migration guide for details. https://mesa.readthedocs.io/latest/migration_guide.html#time-and-schedulers\n",
             "  self.schedule = RandomActivation(self)\n"
           ]
         },
@@ -706,7 +721,13 @@
           "output_type": "stream",
           "text": [
             "Abriendo puerta en: (3, 0)\n",
-            "Abriendo puerta en: (5, 0)\n",
+            "Abriendo puerta en: (5, 0)\n"
+          ]
+        },
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
             "Abriendo puerta en: (0, 1)\n",
             "Abriendo puerta en: (5, 3)\n",
             "Abriendo puerta en: (3, 5)\n",
@@ -714,25 +735,25 @@
             "Agentes creados: 6\n",
             "Paso 0\n",
             "Daño total del edificio por rana: 1\n",
-            "Rana en (5, 0) con AP=6 y carry=False\n",
-            "Daño total del edificio por rana: 2\n",
-            "Rana en (0, 1) con AP=4 y carry=False\n",
-            "Rana en (3, 5) con AP=8 y carry=False\n",
-            "Daño total del edificio por rana: 3\n",
             "Rana en (5, 5) con AP=6 y carry=False\n",
-            "Daño total del edificio por rana: 4\n",
-            "Rana en (5, 3) con AP=6 y carry=False\n",
-            "Paso 1\n",
-            "Daño total del edificio por rana: 5\n",
-            "Rana en (5, 3) con AP=8 y carry=False\n",
-            "Daño total del edificio por rana: 6\n",
-            "Rana en (0, 1) con AP=6 y carry=False\n",
             "Rana en (3, 5) con AP=8 y carry=False\n",
-            "Daño total del edificio por rana: 7\n",
-            "Rana en (5, 0) con AP=8 y carry=False\n",
-            "Daño total del edificio por rana: 8\n",
+            "Daño total del edificio por rana: 2\n",
+            "Rana en (5, 0) con AP=4 y carry=False\n",
+            "Daño total del edificio por rana: 3\n",
+            "Rana en (0, 1) con AP=6 y carry=False\n",
+            "Daño total del edificio por rana: 4\n",
+            "Rana en (5, 3) con AP=4 y carry=False\n",
+            "Paso 1\n",
+            "Rana en (3, 5) con AP=8 y carry=False\n",
+            "Daño total del edificio por rana: 32\n",
+            "Rana en (0, 1) con AP=8 y carry=False\n",
+            "Daño total del edificio por rana: 33\n",
             "Rana en (5, 5) con AP=8 y carry=False\n",
-            "DERROTA: demasiadas víctimas perdidas\n"
+            "Daño total del edificio por rana: 34\n",
+            "Rana en (5, 3) con AP=4 y carry=False\n",
+            "Daño total del edificio por rana: 35\n",
+            "Rana en (5, 0) con AP=6 y carry=False\n",
+            "DERROTA: edificio colapsado\n"
           ]
         }
       ],
@@ -744,7 +765,7 @@
         "height=6\n",
         "agents=6\n",
         "model = RanaModel(width, height, agents)\n",
-        "for i in range(1000):\n",
+        "for i in range(30):\n",
         "  print(f\"Paso {i}\")\n",
         "  model.step()\n",
         "  if model.collapsed or model.rescued >= model.rescue_goal or model.lost >= model.lose_limit:\n",
@@ -784,23 +805,46 @@
         "ITERATIONS = 30\n",
         "model = RanaModel()\n",
         "\n",
-        "for i in range(ITERATIONS):\n",
-        "    model.step()\n",
-        "    grid = get_grid(model).tolist()   # importante: convertir numpy → lista\n",
         "\n",
-        "    data = {\n",
-        "        \"step\": i,\n",
-        "        \"grid\": grid,\n",
-        "        \"agent_pos\": (-0.05, 0.05)\n",
-        "    }\n",
+        "try:\n",
+        "    for i in range(ITERATIONS):\n",
+        "        model.step()\n",
+        "        grid = get_grid(model).tolist()   #convertir numpy → lista\n",
+        "\n",
+        "        data = {\n",
+        "            #Funciones \n",
+        "            \"step\": i,\n",
+        "            \"grid\": grid, \n",
+        "            #Importar agente\n",
+        "            \"agent_pos\": ([agent.pos for agent in model.schedule.agents]),\n",
+        "            \"agent_ap\": ([agent.AP for agent in model.schedule.agents]),\n",
+        "            \"agent_carry\": ([agent.carry for agent in model.schedule.agents]),\n",
+        "            #Importar fuego\n",
+        "            \"fires\": ([[cell.row, cell.col, cell.state] for row in model.fire_grid for cell in row if cell.state != Fire.EMPTY]),\n",
+        "            \"fire_grid\": ([[cell.row, cell.col, cell.state] for row in model.fire_grid for cell in row]),\n",
+        "            #Importar POI\n",
+        "            \"pois\": ([[poi.row, poi.col, poi.role, poi.revealed] for row in model.poi_grid for poi in row if poi is not None]),\n",
+        "            #Importar paredes\n",
+        "            \"wall_grid\": ([[cell.get_positions() for cell in row] for row in model.wall_grid]),\n",
+        "            \"wall_damages\": ([[cell.get_damages() for cell in row] for row in model.wall_grid]),\n",
+        "            #Importar puertas\n",
+        "            \"door_list\": ([[door.cell1, door.cell2, door.state] for door in door_list]),\n",
+        "            #Modelo\n",
+        "            \"model.collapsed\": model.collapsed,\n",
+        "            \"total_damage\": model.total_damage,\n",
+        "            \"rescued\": model.rescued,\n",
+        "            \"lost\": model.lost,\n",
+        "            \"max_damage\": model.max_damage,\n",
+        "        }\n",
         "\n",
         "\n",
-        "    message = json.dumps(data)\n",
-        "    conn.sendall((message + \"\\n\").encode(\"utf-8\"))\n",
-        "    print(f\"Enviado paso {i}\")\n",
+        "        message = json.dumps(data)\n",
+        "        conn.sendall((message + \"\\n\").encode(\"utf-8\"))\n",
+        "        print(f\"Enviado paso {i}\")\n",
         "\n",
-        "conn.close()\n",
-        "server.close()"
+        "finally:\n",
+        "    conn.close()\n",
+        "    server.close()"
       ]
     },
     {
