--- a/Agentes/RanaBomberosEstrategia.ipynb
+++ b/Agentes/RanaBomberosEstrategia.ipynb
@@ -481,7 +481,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -1173,7 +1173,7 @@
       "provenance": []
     },
     "kernelspec": {
-      "display_name": ".venv",
+      "display_name": "Python 3",
       "language": "python",
       "name": "python3"
     },
@@ -1187,7 +1187,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.13.3"
+      "version": "3.13.5"
     }
   },
   "nbformat": 4,
